create custom JRE for docker image
https://github.com/gaul/s3proxy/issues/401